tests/fixtures/guardrails/valid/app/routes/reassigned-service-import.ts
let target;
target = "~/app/services/health.server";

export async function loader() {
  return import(target);
}
