tests/fixtures/guardrails/invalid/route-assigned-imported-binding-bypass/app/lib/delegated-loader.ts
export async function delegatedLoader() {
  return "  delegated  ".trim();
}
